Java: Throw exception with explanation for missing native access